--- a/.github/workflows/fetch_version.yml
+++ b/.github/workflows/fetch_version.yml
@@ -46,5 +46,5 @@ jobs:
       env:
         REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
       run: |
-        git remote set-url origin https://x-access-token:${REPO_ACCESS_TOKEN}@github.com/smarthomefans01/docker-pull-proxy.git
+        git remote set-url origin https://x-access-token:${REPO_ACCESS_TOKEN}@github.com/smarthomefansbox/test
         git push origin main
