--- a/.github/workflows/fetch_version.yml
+++ b/.github/workflows/fetch_version.yml
@@ -36,9 +36,12 @@ jobs:
         cat test.txt # 输出内容以便调试
 
     - name: Commit changes
+      env:
+        GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
+        GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
       run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
+        git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+        git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
         git add test.txt
         git commit -m "Update supervisor version to $SUPERVISOR_VERSION" || echo "No changes to commit"
 
@@ -47,4 +50,4 @@ jobs:
         REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
       run: |
         git remote set-url origin https://x-access-token:${{ secrets.REPO_ACCESS_TOKEN }}@github.com/smarthomefansbox/test.git
-        git push origin main
+        git push https://x-access-token:${{ secrets.REPO_ACCESS_TOKEN }}@github.com/smarthomefansbox/test.git
