--- a/.github/workflows/fetch_version.yml
+++ b/.github/workflows/fetch_version.yml
@@ -49,5 +49,5 @@ jobs:
       env:
         REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
       run: |
-        git remote set-url origin https://x-access-token:${{ secrets.REPO_ACCESS_TOKEN }}@github.com/smarthomefansbox/test.git
-        git push https://x-access-token:${{ secrets.REPO_ACCESS_TOKEN }}@github.com/smarthomefansbox/test.git
+        git remote set-url origin https://${{ secrets.REPO_ACCESS_TOKEN }}@github.com/smarthomefansbox/test.git
+        git push https://${{ secrets.REPO_ACCESS_TOKEN }}@github.com/smarthomefansbox/test.git
