--- a/.github/workflows/fetch_version.yml
+++ b/.github/workflows/fetch_version.yml
@@ -1,53 +1,33 @@
-name: Fetch Supervisor Version
+name: Update Supervisor Version
 
 on:
   schedule:
-    - cron: '*/5 * * * *' # 每五分钟运行一次
-  workflow_dispatch: # 允许手动触发
+    - cron: '0 0 * * *' # 每天0点运行一次
+  workflow_dispatch: # 允许手动触发工作流
 
 jobs:
-  fetch-and-update:
+  update_version:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '20' # 使用最新的 Node.js 20 版本
-
-    - name: Install jq
-      run: sudo apt-get update && sudo apt-get install -y jq
+      uses: actions/checkout@v2
 
     - name: Fetch supervisor version
-      id: fetch_supervisor_version
+      id: fetch_version
       run: |
-        curl -s https://version.home-assistant.io/stable.json -o stable.json
-        cat stable.json # 输出内容以便调试
-        SUPERVISOR_VERSION=$(jq -r '.supervisor' stable.json)
-        echo "Fetched supervisor version: $SUPERVISOR_VERSION"
-        echo "SUPERVISOR_VERSION=$SUPERVISOR_VERSION" >> $GITHUB_ENV
+        curl -s https://version.home-assistant.io/stable.json | jq -r '.supervisor' > supervisor_version.txt
 
-    - name: Update test.txt
+    - name: Create or update test.txt
       run: |
-        echo "$SUPERVISOR_VERSION" > test.txt
-        cat test.txt # 输出内容以便调试
+        echo "Supervisor version: $(cat supervisor_version.txt)" > test.txt
 
     - name: Commit changes
-      env:
-        GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
-        GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
       run: |
-        git config --global user.name "${{ secrets.GIT_USER_NAME }}"
-        git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
+        git config --global user.name '${{ secrets.GIT_USER_NAME }}'
+        git config --global user.email '${{ secrets.GIT_USER_EMAIL }}'
         git add test.txt
-        git commit -m "Update supervisor version to $SUPERVISOR_VERSION" || echo "No changes to commit"
-
-    - name: Push changes to the repository
+        git commit -m "Update supervisor version to $(cat supervisor_version.txt)"
+        git push https://x-access-token:${{ secrets.REPO_ACCESS_TOKEN }}@github.com/smarthomefansbox/test.git
       env:
-        REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
-      run: |
-        git remote set-url origin https://${{ secrets.REPO_ACCESS_TOKEN }}@github.com/smarthomefansbox/test.git
-        git push origin HEAD:main
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
