--- a/.github/workflows/fetch_version.yml
+++ b/.github/workflows/fetch_version.yml
@@ -28,6 +28,4 @@ jobs:
         git config --global user.email '${{ secrets.GIT_USER_EMAIL }}'
         git add test.txt
         git commit -m "Update supervisor version to $(cat supervisor_version.txt)"
-        git push https://${{ secrets.GIT_USER_NAME }}:${{ secrets.GIT_USER_PASSWORD }}@github.com/smarthomefansbox/test.git
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        git push https://x-access-token:${{ secrets.REPO_ACCESS_TOKEN }}@github.com/smarthomefansbox/test.git
