--- a/.github/workflows/fetch_version.yml
+++ b/.github/workflows/fetch_version.yml
@@ -29,3 +29,7 @@ jobs:
         git add test.txt
         git commit -m "Update supervisor version to $(cat supervisor_version.txt)"
         git push https://x-access-token:${{ secrets.REPO_ACCESS_TOKEN }}@github.com/smarthomefansbox/test.git
+      env:
+        GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
+        GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
+        REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
