--- a/.github/workflows/fetch_version.yml
+++ b/.github/workflows/fetch_version.yml
@@ -24,12 +24,10 @@ jobs:
 
     - name: Commit changes
       run: |
-        git config --global user.name '${{ secrets.GIT_USER_NAME }}'
-        git config --global user.email '${{ secrets.GIT_USER_EMAIL }}'
+        git config --global user.name 'smarthomefansbox'
+        git config --global user.email 'zhangjian3120@gmail.com'
         git add test.txt
         git commit -m "Update supervisor version to $(cat supervisor_version.txt)"
-        git push https://x-access-token:${{ secrets.REPO_ACCESS_TOKEN }}@github.com/smarthomefansbox/test.git
+        git push
       env:
-        GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
-        GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
-        REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
