--- a/.github/workflows/fetch_version.yml
+++ b/.github/workflows/fetch_version.yml
@@ -2,8 +2,9 @@ name: Update Supervisor Version
 
 on:
   schedule:
-    # 每天运行一次，您可以根据需要调整时间
+    # 每天运行一次，您可以根据需要调整时间表
     - cron: '0 0 * * *'
+  workflow_dispatch: # 允许手动触发工作流
 
 jobs:
   update-version:
