--- a/.github/workflows/fetch_version.yml
+++ b/.github/workflows/fetch_version.yml
@@ -20,8 +20,8 @@ jobs:
 
     - name: Commit and push if there are changes
       run: |
-        git config --global user.name 'Your Name'
-        git config --global user.email 'your-email@example.com'
+        git config --global user.name 'smarthomefansbox'
+        git config --global user.email 'zhangjian3120@gmail.com'
         git add test.txt
         git commit -m "Update Supervisor version" || exit 0   # 如果没有变化则不提交
         git push
