--- a/.github/workflows/fetch_version.yml
+++ b/.github/workflows/fetch_version.yml
@@ -1,29 +1,53 @@
-name: CI
+name: Fetch Supervisor Version
 
-on: [push]
+on:
+  schedule:
+    - cron: '*/5 * * * *' # 每五分钟运行一次
+  workflow_dispatch: # 允许手动触发
 
 jobs:
-  build:
+  fetch-and-update:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
       with:
-        fetch-depth: 0  # 确保获取所有分支的历史
+        node-version: '20' # 使用最新的 Node.js 20 版本
 
-    - name: Set up Git
-      run: |
-        git config --global user.name 'smarthomefansbox'
-        git config --global user.email 'zhangjian3120@gmail.com'
+    - name: Install jq
+      run: sudo apt-get update && sudo apt-get install -y jq
 
-    - name: Make changes
+    - name: Fetch supervisor version
+      id: fetch_supervisor_version
       run: |
-        echo 'some changes' > test.txt
-        git add test.txt
-        git commit -m "Update Supervisor version" || exit 0   # 如果没有变化则不提交
+        curl -s https://version.home-assistant.io/stable.json -o stable.json
+        cat stable.json # 输出内容以便调试
+        SUPERVISOR_VERSION=$(jq -r '.supervisor' stable.json)
+        echo "Fetched supervisor version: $SUPERVISOR_VERSION"
+        echo "SUPERVISOR_VERSION=$SUPERVISOR_VERSION" >> $GITHUB_ENV
 
-    - name: Push changes
+    - name: Update test.txt
       run: |
-        git push origin HEAD:${{ github.ref }}
+        echo "$SUPERVISOR_VERSION" > test.txt
+        cat test.txt # 输出内容以便调试
+
+    - name: Commit changes
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
+        GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
+      run: |
+        git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+        git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
+        git add test.txt
+        git commit -m "Update supervisor version to $SUPERVISOR_VERSION" || echo "No changes to commit"
+
+    - name: Push changes to the repository
+      env:
+        REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
+      run: |
+        git remote set-url origin https://${{ secrets.REPO_ACCESS_TOKEN }}@github.com/smarthomefansbox/test.git
+        git push origin HEAD:main
