--- a/.github/workflows/fetch_version.yml
+++ b/.github/workflows/fetch_version.yml
@@ -1,53 +1,53 @@
-name: Fetch Supervisor Version
+name: Update Versions and Push to Repo
 
 on:
   schedule:
-    - cron: '*/5 * * * *' # 每五分钟运行一次
-  workflow_dispatch: # 允许手动触发
+    - cron: '0 0 * * *' # 每天午夜运行一次
+  workflow_dispatch:
 
 jobs:
-  fetch-and-update:
+  update-and-push:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
+      uses: actions/checkout@v2
       with:
-        node-version: '20' # 使用最新的 Node.js 20 版本
+        repository: smarthomefansbox/docker-pull-proxy
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Install jq
-      run: sudo apt-get update && sudo apt-get install -y jq
+    - name: Set up jq
+      run: sudo apt-get install jq -y
 
-    - name: Fetch supervisor version
-      id: fetch_supervisor_version
+    - name: Fetch JSON data and extract versions
+      id: extract_versions
       run: |
-        curl -s https://version.home-assistant.io/stable.json -o stable.json
-        cat stable.json # 输出内容以便调试
-        SUPERVISOR_VERSION=$(jq -r '.supervisor' stable.json)
-        echo "Fetched supervisor version: $SUPERVISOR_VERSION"
-        echo "SUPERVISOR_VERSION=$SUPERVISOR_VERSION" >> $GITHUB_ENV
+        json_data=$(curl -s https://version.home-assistant.io/stable.json)
+        echo "supervisor=$(echo $json_data | jq -r '.supervisor')" >> $GITHUB_ENV
+        echo "cli=$(echo $json_data | jq -r '.cli')" >> $GITHUB_ENV
+        echo "homeassistant=$(echo $json_data | jq -r '.homeassistant.default')" >> $GITHUB_ENV
+        echo "observer=$(echo $json_data | jq -r '.observer')" >> $GITHUB_ENV
+        echo "audio=$(echo $json_data | jq -r '.audio')" >> $GITHUB_ENV
+        echo "dns=$(echo $json_data | jq -r '.dns')" >> $GITHUB_ENV
+        echo "multicast=$(echo $json_data | jq -r '.multicast')" >> $GITHUB_ENV
 
-    - name: Update test.txt
+    - name: Generate content for trigger.txt
       run: |
-        echo "$SUPERVISOR_VERSION" > test.txt
-        cat test.txt # 输出内容以便调试
+        content="ghcr.io/home-assistant/amd64-hassio-supervisor:${{ env.supervisor }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-supervisor:${{ env.supervisor }}
+ghcr.io/home-assistant/amd64-hassio-cli:${{ env.cli }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-cli:${{ env.cli }}
+ghcr.io/home-assistant/amd64-homeassistant:${{ env.homeassistant }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-homeassistant:${{ env.homeassistant }}
+ghcr.io/home-assistant/amd64-hassio-observer:${{ env.observer }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-observer:${{ env.observer }}
+ghcr.io/home-assistant/amd64-hassio-audio:${{ env.audio }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-audio:${{ env.audio }}
+ghcr.io/home-assistant/amd64-hassio-dns:${{ env.dns }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-dns:${{ env.dns }}
+ghcr.io/home-assistant/amd64-hassio-multicast:${{ env.multicast }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-multicast:${{ env.multicast }}"
+        echo "$content" > trigger.txt
 
-    - name: Commit changes
+    - name: Commit and push changes
+      run: |
+        git config user.name "smarthomefansbox"
+        git config user.email "zhangjian3120@gmail.com"
+        git add trigger.txt
+        git commit -m "Update trigger.txt with new versions"
+        git push -u origin main --force
       env:
-        GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
-        GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
-      run: |
-        git config --global user.name "${{ secrets.GIT_USER_NAME }}"
-        git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
-        git add test.txt
-        git commit -m "Update supervisor version to $SUPERVISOR_VERSION" || echo "No changes to commit"
-
-    - name: Push changes to the repository
-      env:
-        REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
-      run: |
-        git remote set-url origin https://${{ secrets.REPO_ACCESS_TOKEN }}@github.com/smarthomefansbox/test.git
-        git push origin HEAD:main
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
