--- a/.github/workflows/fetch_version.yml
+++ b/.github/workflows/fetch_version.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: smarthomefansbox/docker-pull-proxy
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.REPO_ACCESS_TOKEN }}
 
     - name: Set up jq
       run: sudo apt-get install jq -y
@@ -50,4 +50,4 @@ ghcr.io/home-assistant/amd64-hassio-multicast:${{ env.multicast }} registry.cn-h
         git commit -m "Update trigger.txt with new versions"
         git push -u origin main --force
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
