--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -1,53 +1,50 @@
-name: Update Versions and Push to Repo
+name: Update Docker Images
 
 on:
   schedule:
-    - cron: '0 0 * * *' # 每天午夜运行一次
+    - cron: '0 0 * * *' # 每天运行一次，例如在午夜
   workflow_dispatch:
 
 jobs:
-  update-and-push:
+  update-images:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      with:
-        repository: smarthomefansbox/docker-pull-proxy
-        token: ${{ secrets.REPO_ACCESS_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          repository: smarthomefansbox/docker-pull-proxy
+          token: ${{ secrets.REPO_ACCESS_TOKEN }} # 确保在你的GitHub仓库中设置了REPO_ACCESS_TOKEN
 
-    - name: Set up jq
-      run: sudo apt-get install jq -y
+      - name: Set up Docker Environment
+        run: mkdir -p ${{ github.workspace }}/dockerimg
 
-    - name: Fetch JSON data and extract versions
-      id: extract_versions
-      run: |
-        json_data=$(curl -s https://version.home-assistant.io/stable.json)
-        echo "supervisor=$(echo $json_data | jq -r '.supervisor')" >> $GITHUB_ENV
-        echo "cli=$(echo $json_data | jq -r '.cli')" >> $GITHUB_ENV
-        echo "homeassistant=$(echo $json_data | jq -r '.homeassistant.default')" >> $GITHUB_ENV
-        echo "observer=$(echo $json_data | jq -r '.observer')" >> $GITHUB_ENV
-        echo "audio=$(echo $json_data | jq -r '.audio')" >> $GITHUB_ENV
-        echo "dns=$(echo $json_data | jq -r '.dns')" >> $GITHUB_ENV
-        echo "multicast=$(echo $json_data | jq -r '.multicast')" >> $GITHUB_ENV
+      - name: Fetch the latest Home Assistant versions
+        run: |
+          json_data=$(curl -s https://version.home-assistant.io/stable.json)
+          echo "SUPERVISOR_VERSION=$(echo $json_data | jq -r '.supervisor')" >> $GITHUB_ENV
+          echo "CLI_VERSION=$(echo $json_data | jq -r '.cli')" >> $GITHUB_ENV
+          echo "HOMEASSISTANT_VERSION=$(echo $json_data | jq -r '.homeassistant.default')" >> $GITHUB_ENV
+          echo "OBSERVER_VERSION=$(echo $json_data | jq -r '.observer')" >> $GITHUB_ENV
+          echo "AUDIO_VERSION=$(echo $json_data | jq -r '.audio')" >> $GITHUB_ENV
+          echo "DNS_VERSION=$(echo $json_data | jq -r '.dns')" >> $GITHUB_ENV
+          echo "MULTICAST_VERSION=$(echo $json_data | jq -r '.multicast')" >> $GITHUB_ENV
 
-    - name: Generate content for trigger.txt
-      run: |
-        content="ghcr.io/home-assistant/amd64-hassio-supervisor:${{ env.supervisor }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-supervisor:${{ env.supervisor }}
-ghcr.io/home-assistant/amd64-hassio-cli:${{ env.cli }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-cli:${{ env.cli }}
-ghcr.io/home-assistant/amd64-homeassistant:${{ env.homeassistant }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-homeassistant:${{ env.homeassistant }}
-ghcr.io/home-assistant/amd64-hassio-observer:${{ env.observer }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-observer:${{ env.observer }}
-ghcr.io/home-assistant/amd64-hassio-audio:${{ env.audio }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-audio:${{ env.audio }}
-ghcr.io/home-assistant/amd64-hassio-dns:${{ env.dns }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-dns:${{ env.dns }}
-ghcr.io/home-assistant/amd64-hassio-multicast:${{ env.multicast }} registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-multicast:${{ env.multicast }}"
-        echo "$content" > trigger.txt
+      - name: Generate the content for trigger.txt
+        run: |
+          content="ghcr.io/home-assistant/amd64-hassio-supervisor:$SUPERVISOR_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-supervisor:$SUPERVISOR_VERSION
+          ghcr.io/home-assistant/amd64-hassio-cli:$CLI_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-cli:$CLI_VERSION
+          ghcr.io/home-assistant/amd64-homeassistant:$HOMEASSISTANT_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-homeassistant:$HOMEASSISTANT_VERSION
+          ghcr.io/home-assistant/amd64-hassio-observer:$OBSERVER_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-observer:$OBSERVER_VERSION
+          ghcr.io/home-assistant/amd64-hassio-audio:$AUDIO_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-audio:$AUDIO_VERSION
+          ghcr.io/home-assistant/amd64-hassio-dns:$DNS_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-dns:$DNS_VERSION
+          ghcr.io/home-assistant/amd64-hassio-multicast:$MULTICAST_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-multicast:$MULTICAST_VERSION"
+          echo "$content" > ${{ github.workspace }}/dockerimg/trigger.txt
 
-    - name: Commit and push changes
-      env:
-        REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
-      run: |
-        git config user.name "smarthomefansbox"
-        git config user.email "zhangjian3120@gmail.com"
-        git add trigger.txt
-        git commit -m "Update trigger.txt with new versions"
-        git push -u origin main --force
+      - name: Commit and push changes
+        run: |
+          cd ${{ github.workspace }}/dockerimg
+          git config --global user.name 'smarthomefansbox'
+          git config --global user.email 'zhangjian3120@gmail.com'
+          git add trigger.txt
+          git commit -m "Update trigger.txt with new versions"
+          git push --force
