--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -41,10 +41,13 @@ jobs:
           echo "$content" > ${{ github.workspace }}/dockerimg/trigger.txt
 
       - name: Commit and push changes
+        env:
+          GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
+          GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
         run: |
           cd ${{ github.workspace }}/dockerimg
-          git config --global user.name 'smarthomefansbox'
-          git config --global user.email 'zhangjian3120@gmail.com'
+          git config --global user.name "$GIT_USER_NAME"
+          git config --global user.email "$GIT_USER_EMAIL"
           git add trigger.txt
           git commit -m "Update trigger.txt with new versions"
           git push --force
