--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: smarthomefansbox/docker-pull-proxy
-          token: ${{ secrets.REPO_ACCESS_TOKEN }}
+          token: ${{ secrets.REPO_ACCESS_TOKEN }} # 确保在你的GitHub仓库中设置了REPO_ACCESS_TOKEN
 
       - name: Set up Docker Environment
         run: mkdir -p ${{ github.workspace }}/dockerimg
@@ -31,17 +31,20 @@ jobs:
 
       - name: Generate the content for trigger.txt
         run: |
-          content="..."
+          content="ghcr.io/home-assistant/amd64-hassio-supervisor:$SUPERVISOR_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-supervisor:$SUPERVISOR_VERSION
+          ghcr.io/home-assistant/amd64-hassio-cli:$CLI_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-cli:$CLI_VERSION
+          ghcr.io/home-assistant/amd64-homeassistant:$HOMEASSISTANT_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-homeassistant:$HOMEASSISTANT_VERSION
+          ghcr.io/home-assistant/amd64-hassio-observer:$OBSERVER_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-observer:$OBSERVER_VERSION
+          ghcr.io/home-assistant/amd64-hassio-audio:$AUDIO_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-audio:$AUDIO_VERSION
+          ghcr.io/home-assistant/amd64-hassio-dns:$DNS_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-dns:$DNS_VERSION
+          ghcr.io/home-assistant/amd64-hassio-multicast:$MULTICAST_VERSION registry.cn-hangzhou.aliyuncs.com/smarthomefans/amd64-hassio-multicast:$MULTICAST_VERSION"
           echo "$content" > ${{ github.workspace }}/dockerimg/trigger.txt
 
       - name: Commit and push changes
-        env:
-          GIT_USER: ${{ secrets.GIT_USER_NAME }}
-          GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
         run: |
           cd ${{ github.workspace }}/dockerimg
-          git config --global user.name "$GIT_USER"
-          git config --global user.email "$GIT_USER_EMAIL"
+          git config --global user.name 'smarthomefansbox'
+          git config --global user.email 'zhangjian3120@gmail.com'
           git add trigger.txt
           git commit -m "Update trigger.txt with new versions"
           git push --force
